新增Arc、CircleMenu、Sector控件
1、新增Arc、CircleMenu、Sector控件
2、修复MessageControl不能自动消失的bug

--- a/test/WYW.UI.Test.csproj
+++ b/test/WYW.UI.Test.csproj
@@ -16,6 +16,9 @@
     <None Update="Docs\demo.xps">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\background.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
