--- a/src/WYW.UI.csproj
+++ b/src/WYW.UI.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Page Update="Themes\Basic\DarkBrushes.xaml">
+    <Page Update="Themes\Basic\Colors\DarkColor.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
@@ -38,10 +38,6 @@
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Themes\Basic\Colors\" />
   </ItemGroup>
 
   <ItemGroup>
